--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write src/*"
   },
   "dependencies": {
+    "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "next": "^13.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-table": "^7.8.0"
